Fixed spacing on mobile

--- a/www/scss/style.scss
+++ b/www/scss/style.scss
@@ -35,6 +35,10 @@ $fancy-font: 'Archivo Black', sans-serif;
 		width: 300px;
 		height: 360px;
 		@include side-padding(40px);
+		// top: 50%;
+		// bottom: 50%;
+		// position: absolute;
+		//margin-top
 	}
 
 	#bikenab {
@@ -201,7 +205,7 @@ $fancy-font: 'Archivo Black', sans-serif;
 		width: 100%;
 
  		.ok {
- 			transform: translate(0, 50%);
+ 			transform: translate(0, 70%);
  		}
 
 
@@ -412,4 +416,10 @@ $fancy-font: 'Archivo Black', sans-serif;
 	display: inline-block;
 	border-width: 0px;
 	font-size: 15px; //TODO: If possible, have font size expand on big screens, contract on small
+}
+
+#spacer {
+	width: 100%;
+	min-height: 30px;
+	//background-color: purple;
 }
